# brpc_openai_proxy

./: CMakeLists.txt  main.cc
conf/: openai.conf
proto/: http_service.proto
src/: http_server.cc  http_server.h  openai_service.cc  openai_service.h
